# llvm-lua

./: .hgignore  .svnignore  AUTHORS  CMakeLists.txt  ChangeLog  CrossCompile.md  JITExample.md  Makefile  ProjectHome.md  README.llvm-lua  StacklessJITFunctions.md  TODO  TODO.md  cmake_uninstall.cmake.in  gen_changelog.sh
cmake/: CustomMacros.cmake  FindLLVM.cmake
etc/: embed_jit.c  embed_jit.cpp  lua.pc
llvm-lua/: CMakeLists.txt  COPYRIGHT.llvm-lua  LLVMCompiler.cpp  LLVMCompiler.h  LLVMDumper.cpp  LLVMDumper.h  Makefile  TODO  bin2c.c  compile.sh  compile_all.sh  compile_bc.sh  compile_c.sh  hook_parser.c  llvm-compiler.cpp  llvm-compiler.h  llvm-lua.cpp  llvm-lua.h  llvm-luac.cpp  llvm-luac.h  llvm_compiler.cpp  llvm_compiler.h  llvm_compiler_private.h  llvm_dumper.cpp  llvm_dumper.h  llvm_lmathlib.c  llvm_lua_config.h.in  load_embedded_bc.cpp  load_embedded_bc.h  load_jit_proto.c  load_jit_proto.h  load_liblua_main.cpp  load_liblua_main.h  load_vm_ops.cpp  load_vm_ops.h  lua-compiler  lua-compiler.in  lua-cross-compiler.in  lua_compiler.c  lua_compiler.h  (+13 more)
llvm-lua/tests/: NOTES  add.lua  arg_test.lua  big_table.lua  coroutine.lua  dump.lua  for.lua  hash2.lua  loadk.lua  local_nil.lua  loops.lua  lua_tail.lua  nestedloop.lua  nestedloop2.lua  nums.lua  scimark_loop.lua  scimark_rand.lua  stress_for.lua  test.lua  test2.lua  test3.lua  test4.lua  test_lineerror.lua  test_math.lua  test_tail.lua  test_tail_nil_multret.lua  test_varg_tail2.lua
src/: Makefile  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcoco.c  lcoco.h  ldebug.c  ldebug.h  ldo.c  ldo.h  lfunc.c  lgc.c  lgc.h  loadlib.c  lobject.h  lstate.c  lstate.h  lstring.c  ltable.c  lua.c  lua.h  luaconf.h  lvm.c  lvm.h  print.c
test/: sieve.lua
tools/: hg_import_split.lua
